完善报错提示